--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -21,6 +21,8 @@
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^10.3.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
