--- a/eduroutez-next/package.json
+++ b/eduroutez-next/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
