--- a/eduroutez-next/package.json
+++ b/eduroutez-next/package.json
@@ -68,6 +68,7 @@
     "nextjs-toploader": "^1.6.12",
     "nuqs": "^1.19.1",
     "postcss": "8.4.28",
+    "razorpay": "^2.9.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
