--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -32,7 +32,8 @@
     "passport-jwt": "^4.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.24.8",
