Enhance blog and news components with status property and improve image upload handling

--- a/eduroutez-next/package.json
+++ b/eduroutez-next/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "next build"
   },
   "lint-staged": {
     "**/*": [
