--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "razorpay": "^2.9.5",
+    "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.2",
