--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -34,6 +34,7 @@
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "unirest": "^0.6.0",
     "winston": "^3.14.2",
     "xlsx": "^0.18.5"
   },
