--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
