--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -24,6 +24,7 @@
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.3.0",
     "mongoose": "^8.6.2",
+    "mongoose-softdelete": "^1.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-cache": "^5.1.2",
