--- a/shiksha-server/package.json
+++ b/shiksha-server/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "randomstring": "^1.3.1",
     "razorpay": "^2.9.5",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
